Quote the travis SCRIPT

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,19 +13,19 @@ env:
     # - SCRIPT=test-2.12
     - SCRIPT=test-sbt-0.13
     # - SCRIPT=test-sbt-1.0
-    - SCRIPT=test-sbt-1.0-singleTest cassandra-overrides-default-configs
-    - SCRIPT=test-sbt-1.0-singleTest custom-port-range-for-services
-    - SCRIPT=test-sbt-1.0-singleTest distribution
-    - SCRIPT=test-sbt-1.0-singleTest external-project-javadsl
-    - SCRIPT=test-sbt-1.0-singleTest external-project-scaladsl
-    - SCRIPT=test-sbt-1.0-singleTest http-backend-switch
-    - SCRIPT=test-sbt-1.0-singleTest injected-configs
-    - SCRIPT=test-sbt-1.0-singleTest run
-    - SCRIPT=test-sbt-1.0-singleTest run-all-javadsl
-    - SCRIPT=test-sbt-1.0-singleTest run-all-scaladsl
-    - SCRIPT=test-sbt-1.0-singleTest run-play-on-conf
-    - SCRIPT=test-sbt-1.0-singleTest run-services
-    - SCRIPT=test-sbt-1.0-singleTest services-intra-communication
+    - SCRIPT="test-sbt-1.0-singleTest cassandra-overrides-default-configs"
+    - SCRIPT="test-sbt-1.0-singleTest custom-port-range-for-services"
+    - SCRIPT="test-sbt-1.0-singleTest distribution"
+    - SCRIPT="test-sbt-1.0-singleTest external-project-javadsl"
+    - SCRIPT="test-sbt-1.0-singleTest external-project-scaladsl"
+    - SCRIPT="test-sbt-1.0-singleTest http-backend-switch"
+    - SCRIPT="test-sbt-1.0-singleTest injected-configs"
+    - SCRIPT="test-sbt-1.0-singleTest run"
+    - SCRIPT="test-sbt-1.0-singleTest run-all-javadsl"
+    - SCRIPT="test-sbt-1.0-singleTest run-all-scaladsl"
+    - SCRIPT="test-sbt-1.0-singleTest run-play-on-conf"
+    - SCRIPT="test-sbt-1.0-singleTest run-services"
+    - SCRIPT="test-sbt-1.0-singleTest services-intra-communication"
     # - SCRIPT=test-maven
     # - SCRIPT=test-documentation
     # - SCRIPT=test-code-style
