Override configuration to start service even when db is not available
Fixes #452.

--- a/persistence-jdbc/core/src/main/resources/play/reference-overrides.conf
+++ b/persistence-jdbc/core/src/main/resources/play/reference-overrides.conf
@@ -27,3 +27,9 @@ jdbc-snapshot-store.slick {
 
 akka.persistence.journal.plugin = jdbc-journal
 akka.persistence.snapshot-store.plugin = jdbc-snapshot-store
+
+# To enable services to start when database is not available
+#
+# @deprecated: Remove in Lagom 1.5.x since this is the default
+# For Play 2.7.x.
+play.db.prototype.hikaricp.initializationFailTimeout=-1
