misspelling fix (detected with misspell tool)

--- a/dev/archetypes/maven-java/src/main/resources/archetype-resources/pom.xml
+++ b/dev/archetypes/maven-java/src/main/resources/archetype-resources/pom.xml
@@ -85,7 +85,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <scala.binary.version>${scala-binary-version}</scala.binary.version>
-        ## Substitues in the scala-binary-version value entered when a project is created from the archetype
+        ## Substitutes in the scala-binary-version value entered when a project is created from the archetype
 
         <lagom.version>%LAGOM-VERSION%</lagom.version>
     </properties>
