--- a/dev/sbt-plugin/src/sbt-test/sbt-plugin/http-backend-switch/netty-impl/src/main/resources/application.conf
+++ b/dev/sbt-plugin/src/sbt-test/sbt-plugin/http-backend-switch/netty-impl/src/main/resources/application.conf
@@ -4,6 +4,6 @@
 play.http.secret.key = whatever
 play.modules.enabled += com.example.netty.impl.NettyModule
 
-## This value is not availble in dev mode (fix https://github.com/lagom/lagom/issues/1136 first)
+## This value is not available in dev mode (fix https://github.com/lagom/lagom/issues/1136 first)
 ## When that issue is fixed this tests can be simplified.
 play.server.netty.server-header = "netty-backend/6.7.8.9.0"
