--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,12 +1,20 @@
 
 lagom.akka.discovery {
 
-  portNames = [
-    { service = "cas_native", portName = null, scheme = "tcp" }
-    { service = "kafka_native", portName = null, scheme = "tcp" }
-  ]
+  # this settings are used to convert a service lookup from Lagom's ServiceLocator to a
+  # Akka Discovery Lookup. The default settings will convert a simple lookup to a lookup 
+  # comprised by a port-name, a protocol and a the setvice namespace.
+  defaults {
+    port-name = "http"
+    protocol = "tcp"
+    prefix = ""
+    suffix = ".default.svc.cluster.local"
+  }
 
-  defaultPortName = "http"
-  defaultScheme = "http"
 
+}
+
+akka.management {
+  # registers bootstrap routes to be included in akka-management's http endpoint
+  http.route-providers += "akka.management.http.status.HealthChecks"
 }
