--- a/dev/sbt-plugin/src/sbt-test/sbt-plugin/http-backend-switch/netty-impl/src/main/resources/application.conf
+++ b/dev/sbt-plugin/src/sbt-test/sbt-plugin/http-backend-switch/netty-impl/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 #
 #
 #
-play.http.secret.key = whatever
+play.http.secret.key = "this-is-a-placeholder-secret-for-tests"
 play.modules.enabled += com.example.netty.impl.NettyModule
 
 ## This value is not available in dev mode (fix https://github.com/lagom/lagom/issues/1136 first)
