Use Alpakka Kafka Committer with Lagom's settings

--- a/service/core/kafka/client/src/main/resources/reference.conf
+++ b/service/core/kafka/client/src/main/resources/reference.conf
@@ -60,6 +60,10 @@ lagom.broker.kafka {
       # within a fixed amount of time.
       # The value provided must be strictly greater than zero.
       batching-interval = 5 seconds
+
+      # Parallelsim for async committing to Kafka
+      # The value provided must be strictly greater than zero.
+      batching-parallelism = 3
     }
   }
 }
