Add flag to enable/disable Akka Cluster Bootstrap

--- a/cluster/core/src/main/resources/reference.conf
+++ b/cluster/core/src/main/resources/reference.conf
@@ -1,4 +1,14 @@
 lagom.cluster {
+
+  # Enables Akka Cluster Bootstrap.
+  # https://developer.lightbend.com/docs/akka-management/current/bootstrap/
+  #
+  # In dev-mode this setting will be off, otherwise the default is on.
+  # Moreover, Akka Cluster Bootstrap only works if akka.cluster.seed-nodes is not configured.
+  # It's possible to override that by defining akka.cluster.seed-nodes or set this property to off in
+  # the application.conf
+  bootstrap.enabled = on
+
   # The cluster node will join itself if akka.cluster.seed-nodes is not configured.
   # In dev-mode this setting will be on, otherwise the default is off. It's possible
   # to override that by defining akka.cluster.seed-nodes or set this property to off in
@@ -9,6 +19,8 @@ lagom.cluster {
   # This is by default off, but you may want to turn it on in production
   # to restart the process.
   exit-jvm-when-system-terminated = off
+
+
 
 }
 lagom.defaults.cluster.join-self = off
