Enable HealthCheckRoutes by default

--- a/cluster/core/src/main/resources/reference.conf
+++ b/cluster/core/src/main/resources/reference.conf
@@ -20,7 +20,10 @@ lagom.cluster {
   # to restart the process.
   exit-jvm-when-system-terminated = off
 
-
-
 }
 lagom.defaults.cluster.join-self = off
+
+# Enables Health Checks routes. When combined with Akka Cluster Bootstrap,
+# this will add the readiness check `akka.management.cluster.scaladsl.ClusterMembershipCheck`
+# that returns true when node is either Up or WeaklyUp
+akka.management.http.route-providers += "akka.management.HealthCheckRoutes"
