--- a/.travis.yml
+++ b/.travis.yml
@@ -8,18 +8,16 @@ env:
     - TRAVIS_JDK=adopt@1.8.192-12
 
 stages:
-  - validations
-  - test
+  - validations-and-test
   - test-build-tools
   - java-11
 
 jobs:
   include:
-    - stage: validations
+    - stage: validations-and-test
       script: bin/test-code-style
       name: "Code validations (format, binary compatibilty, whitesource, etc.)"
-    - stage: test
-      script: bin/test-2.11
+    - script: bin/test-2.11
       name: "Run tests for Scala 2.11"
     - script: bin/test-2.12
       name: "Run tests for Scala 2.12"
