First attempt at enabling akka HTTP management by default in all scenarios

--- a/service/javadsl/server/src/main/resources/reference.conf
+++ b/service/javadsl/server/src/main/resources/reference.conf
@@ -4,3 +4,12 @@ lagom.status-endpoint.enabled = on
 lagom.tools.service-discovery=com.lightbend.lagom.internal.javadsl.server.JavadslServiceDiscovery
 
 play.modules.enabled += com.lightbend.lagom.internal.javadsl.server.ServerModule
+
+
+## By default, any Lagom service exposes the Akka Management HTTP endpoints
+play.modules.enabled += com.lightbend.lagom.internal.javadsl.server.AkkaManagementModule
+
+# Enables Health Checks routes. When combined with Akka Cluster Bootstrap,
+# this will add the readiness check `akka.management.cluster.scaladsl.ClusterMembershipCheck`
+# that returns true when node is either Up or WeaklyUp
+akka.management.http.route-providers += "akka.management.HealthCheckRoutes"
