Made delaying persistent entity startup configurable
Also cleaned up persistent entity configuration reading (javadsl and
scaladsl now share the same configuration reader) and documented how to
delay startup of Kafka subscriptions.

--- a/persistence/core/src/main/resources/reference.conf
+++ b/persistence/core/src/main/resources/reference.conf
@@ -34,6 +34,17 @@ lagom.persistence {
   # Default timeout for PersistentEntityRef.ask replies.
   ask-timeout = 5s
 
+  # Whether the registration of persistent entitities should be delayed until
+  # the cluster has started up. If true, a call to
+  # PersistentEntityRegistry.register won't immediately start cluster sharding
+  # for that entity, rather, it will register a callback to start cluster
+  # sharding once the cluster is started. This ensures there are no extraneous
+  # log messages during startup as clustered features try to use the cluster
+  # before the cluster has started, however it also means any calls to
+  # PersistentEntityRegistry.refFor will fail until the cluster has started
+  # up.
+  delay-registration = false
+
   dispatcher {
     type = Dispatcher
     executor = "thread-pool-executor"
