Completes the add of Akka HTTP Management (test and docs pending)

--- a/cluster/core/src/main/resources/reference.conf
+++ b/cluster/core/src/main/resources/reference.conf
@@ -6,6 +6,7 @@ lagom.cluster {
   # This setting is only honored if `akka.cluster.seed-nodes` is not configured. So if you define
   # `akka.cluster.seed-nodes` Akka Cluster Bootstrap won't run.
   # In dev-mode this setting will be off.
+  # When Cluster Bootstrap runs the Akka HTTP Management will also be started.
   bootstrap.enabled = on
 
   # Instruct the process to form an Akka cluster with itself. This setting is not recommended for production.
