--- a/service/javadsl/server/src/main/resources/reference.conf
+++ b/service/javadsl/server/src/main/resources/reference.conf
@@ -6,10 +6,8 @@ lagom.tools.service-discovery=com.lightbend.lagom.internal.javadsl.server.Javads
 play.modules.enabled += com.lightbend.lagom.internal.javadsl.server.ServerModule
 
 
-## By default, any Lagom service exposes the Akka Management HTTP endpoints
+
+## Provides Akka HTTP Management to Lagom. This Module must be enabled always. If you
+## want to disable Akka Management HTTP set `lagom.akka.management.enabled` to `off`
 play.modules.enabled += com.lightbend.lagom.internal.javadsl.server.AkkaManagementModule
 
-# Enables Health Checks routes. When combined with Akka Cluster Bootstrap,
-# this will add the readiness check `akka.management.cluster.scaladsl.ClusterMembershipCheck`
-# that returns true when node is either Up or WeaklyUp
-akka.management.http.route-providers += "akka.management.HealthCheckRoutes"
