--- a/service/javadsl/server/src/main/resources/reference.conf
+++ b/service/javadsl/server/src/main/resources/reference.conf
@@ -7,7 +7,8 @@ play.modules.enabled += com.lightbend.lagom.internal.javadsl.server.ServerModule
 
 
 
-## Provides Akka HTTP Management to Lagom. This Module must be enabled always. If you
-## want to disable Akka Management HTTP set `lagom.akka.management.enabled` to `off`
+# Provides Akka HTTP Management to Lagom. This Module only provides bindings in Prod Mode.
+# If you  want to disable Akka Management HTTP set `lagom.akka.management.enabled` to `off`
+# Note that this is a required functionality when using Lagom's ClusterBootsrap.
 play.modules.enabled += com.lightbend.lagom.internal.javadsl.server.AkkaManagementModule
 
