Readding missing config

--- a/akka-management/core/src/main/resources/reference.conf
+++ b/akka-management/core/src/main/resources/reference.conf
@@ -1,7 +1,7 @@
 # To disable Akka Management HTTP set `lagom.akka.management.enabled` to `off`. This flag
 # will be ignored if Cluster Bootstrap is enabled, in which case the Akka HTTP Management
 # server will be forced to start
-
+lagom.akka.management.enabled = off
 
 # Enables Health Checks routes. When combined with Akka Cluster Bootstrap,
 # this will add the readiness check `akka.management.cluster.scaladsl.ClusterMembershipCheck`
