Renamed LB Reactive Platform to LB Platform in docs (#1776)
(cherry picked from commit 9540fedc848180d9fa8fd425bec9aa5bad50bd3a)

--- a/cluster/core/src/main/resources/play/reference-overrides.conf
+++ b/cluster/core/src/main/resources/play/reference-overrides.conf
@@ -10,7 +10,7 @@ akka {
     # Make cluster failure detector more tolerant, by default
     failure-detector.acceptable-heartbeat-pause = 5 s
 
-    # Enable Split Brain Resolver keep-majority if Lightbend Reactive Platform is used
+    # Enable Split Brain Resolver keep-majority if Lightbend Platform is used
     split-brain-resolver.active-strategy = keep-majority
 
   }
