--- a/.travis.yml
+++ b/.travis.yml
@@ -34,11 +34,9 @@ jobs:
       script: bin/test-2.12
       env: TRAVIS_JDK=adopt@1.11.0-1
       name: "Run tests for Scala 2.12 and Java 11"
-
-matrix:
-  fast_finish: true
-  allow_failures:
-    - env: TRAVIS_JDK=adopt@1.11.0-1 # not fully supported but allows problem discovery
+    - script: bin/test-sbt-1.0
+      env: TRAVIS_JDK=adopt@1.11.0-1
+      name: "Scripted tests for sbt 1 and Java 11"
 
 before_install:
   # See https://github.com/travis-ci/travis-ci/issues/4629#issuecomment-239493916
