--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -1,4 +1,4 @@
-# These settings are synced to GitHub by https://probot.github.io/apps/settings/
+# These settings are synced to GitHub by https://probot.github.io/apps/settings/.
 repository:
   topics: lagom, distributed-systems, akka, play, playframework, java, scala, microservices, reactive
   private: false
